[package]
name = "wilde"
version = "0.1.0"
authors = ["Simon Dickson <simon@simonhdickson.com>"]
build = "build.rs"

[build-dependencies]
capnpc = "0.8"

[dev-dependencies]
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["v4"] }

[dependencies]
failure = "0.1"
capnp = "0.8"
capnp-rpc = "0.8"
clap = "2.31"
